# org-slipbox

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  manifest.scm  org-slipbox-agenda.el  org-slipbox-buffer.el  org-slipbox-capture-runtime.el  org-slipbox-capture-session.el  org-slipbox-capture-template.el  org-slipbox-capture.el  org-slipbox-dailies.el  org-slipbox-discovery.el  org-slipbox-edit.el  org-slipbox-export.el  org-slipbox-files.el  org-slipbox-graph.el  org-slipbox-id.el  org-slipbox-link.el  org-slipbox-maintenance.el  org-slipbox-metadata.el  org-slipbox-mode.el  org-slipbox-node-insert.el  org-slipbox-node-read.el  org-slipbox-node-visit.el  org-slipbox-node.el  org-slipbox-protocol.el  org-slipbox-rpc.el  org-slipbox-search.el  org-slipbox-sync.el  org-slipbox.el
.github/workflows/: ci.yml  release.yml
benches/: org-slipbox-buffer-bench.el
benches/profiles/: ci.json  release.json
crates/slipbox-core/: Cargo.toml
crates/slipbox-core/src/: artifacts.rs  audit.rs  diagnostics.rs  exploration.rs  lib.rs  nodes.rs  packs.rs  relations.rs  reports.rs  review.rs  routine.rs  tests.rs  validation.rs  workflow.rs  write.rs
crates/slipbox-daemon-client/: Cargo.toml
crates/slipbox-daemon-client/src/: lib.rs
crates/slipbox-index/: Cargo.toml
crates/slipbox-index/src/: discovery.rs  lib.rs
crates/slipbox-rpc/: Cargo.toml
crates/slipbox-rpc/src/: lib.rs
crates/slipbox-store/: Cargo.toml
crates/slipbox-store/src/: admin.rs  agenda.rs  artifacts.rs  audits.rs  backlinks.rs  comparison.rs  exploration.rs  files.rs  forward_links.rs  graph.rs  lib.rs  links.rs  nodes.rs  occurrences.rs  packs.rs  refs.rs  reviews.rs  schema.rs  sync.rs
crates/slipbox-write/: Cargo.toml
crates/slipbox-write/src/: capture.rs  capture_content.rs  capture_note.rs  capture_pipeline.rs  document.rs  lib.rs  metadata.rs  path.rs  rewrite.rs
crates/slipbox-write/src/document/: blocks.rs  outline.rs  properties.rs
doc/: compatibility.org  milestones.org  model.org  roadmap.org  vision.org
src/: cli.rs  main.rs  occurrences_query.rs  reflinks_query.rs  text_query.rs  unlinked_references_query.rs
src/cli/: assets.rs  explorations.rs  notes.rs  output.rs  relations.rs  render.rs  reviews.rs  runtime.rs  system.rs  tests.rs
src/cli/render/: assets.rs  explorations.rs  notes.rs  relations.rs  reviews.rs  system.rs
src/server/: dispatch.rs  framing.rs  mod.rs  rpc.rs  state.rs  workflows.rs
src/server/handlers/: mod.rs  query.rs  write.rs
src/server/handlers/query/: assets.rs  common.rs  exploration.rs  notes.rs  relations.rs  reviews.rs  system.rs  tests.rs
tests/: cli_artifact.rs  cli_artifact_transfer.rs  cli_audit.rs  cli_capture.rs  cli_compare.rs  cli_contracts.rs  cli_daily.rs  cli_diagnose.rs  cli_edit.rs  cli_explore.rs  cli_graph.rs  cli_help.rs  cli_link.rs  cli_node.rs  cli_note.rs  cli_pack.rs  cli_refs_tags_search_agenda.rs  cli_reports.rs  cli_resolve_node.rs  cli_review.rs  cli_routine.rs  cli_save_live.rs  cli_status.rs  cli_structural_contracts.rs  cli_sync_file.rs  cli_workflow.rs  cli_write_contracts.rs  daemon_client.rs  integration_agenda.rs  integration_graph.rs  integration_index.rs  integration_metadata.rs  integration_refs.rs  integration_write.rs  test-org-slipbox.el
tests/support/: mod.rs
