[package]
name = "slipbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local-first Org slipbox tooling."
publish = false

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
slipbox-core = { path = "crates/slipbox-core" }
slipbox-rpc = { path = "crates/slipbox-rpc" }
