[package]
name = "slipbox"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Personal knowledge management with interconnected Org notes."
publish = false

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["slipbox-store/bundled-sqlite"]
system-sqlite = ["slipbox-store/system-sqlite"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Ayan Das <bvits@riseup.net>"]
version = "0.12.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.48", features = ["derive"] }
rusqlite = "0.37.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.20.0"
thiserror = "2.0.16"
walkdir = "2.5.0"
urlencoding = "2.1.3"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
slipbox-core = { path = "crates/slipbox-core" }
slipbox-daemon-client = { path = "crates/slipbox-daemon-client" }
slipbox-index = { path = "crates/slipbox-index" }
slipbox-rpc = { path = "crates/slipbox-rpc" }
slipbox-store = { path = "crates/slipbox-store", default-features = false }
slipbox-write = { path = "crates/slipbox-write" }
tempfile.workspace = true

[dev-dependencies]
anyhow.workspace = true
chrono.workspace = true
slipbox-index = { path = "crates/slipbox-index" }
slipbox-store = { path = "crates/slipbox-store", default-features = false }
slipbox-write = { path = "crates/slipbox-write" }
tempfile.workspace = true
