[package]
name = "slipbox-daemon-client"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
slipbox-core = { path = "../slipbox-core" }
slipbox-rpc = { path = "../slipbox-rpc" }
thiserror.workspace = true
