[package]
name = "slipbox-index"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
slipbox-core = { path = "../slipbox-core" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
