[package]
name = "slipbox-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]
system-sqlite = []

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
slipbox-core = { path = "../slipbox-core" }
