[package]
name = "slipbox-store"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]
system-sqlite = []

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
slipbox-core = { path = "../slipbox-core" }
urlencoding.workspace = true

[dev-dependencies]
slipbox-index = { path = "../slipbox-index" }
tempfile.workspace = true
